# ProjRot

./: .gitignore  CMakeLists.txt  README.md  build.sh  environment.yml  meta.yaml
.circleci/: config.yml
.old_src/src/: main.c  main2.c
debug/: build.sh
scripts/: extract_data_projrot.sh
src/: main.c
